--- a/frontend_app/src/App.css
+++ b/frontend_app/src/App.css
@@ -2,37 +2,89 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content {
+  margin: 0 auto;
+  max-width: 1000px;
+  margin-top: 20px;
+}
+.sell-area {
+  padding: 20px;
+  /* border-left: 1px solid lightgray;
+  border-right: 1px solid lightgray; */
+  min-height: 60vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sell-header {
+  margin-bottom: 50px;
+  margin-top: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.hero-logo {
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.header-logo {
+  height: 60px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-steps {
+  height: 300px;
+  padding-top: 100px;
+}
+
+.align-left {
+  text-align: left;
+}
+
+.card-image,
+.ant-card {
+  width: 300px !important;
+}
+
+.ant-card {
+  display: inline-grid;
+}
+
+.dropzone {
+  border: 1px dotted lightgray;
+  padding-top: 20px;
+  height: 100px;
+  cursor: pointer;
+}
+
+.ant-input {
+  max-width: 400px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.ant-input-group-wrapper {
+  margin: 10px;
+}
+
+.ant-layout-header {
+  background: white !important;
+}
+
+.ant-btn,
+.ant-btn-circle {
+  /* padding: 10px 20px 10px 20px !important; */
+  margin: 10px;
+}
+
+.nav-logo {
+  height: 25px;
+}
+
+.ant-layout-header {
+  background: white !important;
+}
+
+.header-logo {
+  height: 60px;
+}
+
+.content-area {
+  max-width: 1000px;
 }
