--- a/frontend_app/src/App.css
+++ b/frontend_app/src/App.css
@@ -9,6 +9,15 @@
   min-height: 60vh;
 }
 
+.centered {
+  text-align: center;
+}
+
+.heading {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 .sell-area {
   padding: 20px;
   /* border-left: 1px solid lightgray;
@@ -19,6 +28,11 @@
 .sell-header {
   margin-bottom: 50px;
   margin-top: 20px;
+}
+
+.data-section.input {
+  margin-top: 20px;
+  clear: both;
 }
 
 .ant-layout-footer {
@@ -55,9 +69,9 @@
 }
 
 .dropzone {
-  border: 1px dotted lightgray;
-  padding-top: 20px;
-  height: 100px;
+  border: 3px dotted lightgray;
+  padding: 20px;
+  height: 200px;
   cursor: pointer;
 }
 
